<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>edu.illinois.cs.cogcomp</groupId>
    <artifactId>illinois-cogcomp-nlp</artifactId>
    <packaging>pom</packaging>
    <version>3.1.22</version>
    <modules>
        <module>core-utilities</module>
        <module>tokenizer</module>
        <module>lemmatizer</module>
        <module>edison</module>
        <module>curator</module>
        <module>pos</module>
        <module>chunker</module>
        <module>ner</module>
        <module>corpusreaders</module>
        <module>lbjava-nlp-tools</module>
        <module>big-data-utils</module>
        <module>similarity</module>
        <module>inference</module>
        <module>quantifier</module>
        <module>depparse</module>
        <module>commasrl</module>
        <module>clausie</module>
        <module>prepsrl</module>
        <module>stanford_3.3.1</module>
        <module>verbsense</module>
        <module>pipeline</module>
        <module>external</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <googleEclipseFormatterStyle>${project.basedir}/../core-utilities/src/main/resources/eclipse-java-google-style.xml</googleEclipseFormatterStyle>
    </properties>

    <repositories>
        <repository>
            <id>CogcompSoftware</id>
            <name>CogcompSoftware</name>
            <url>http://cogcomp.cs.illinois.edu/m2repo/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>CogcompSoftware</id>
            <name>CogcompSoftware</name>
            <url>scp://bilbo.cs.illinois.edu:/mounts/bilbo/disks/0/www/cogcomp/html/m2repo</url>
        </repository>
        <site>
            <id>CogcompSoftwareDoc</id>
            <url>scp://bilbo.cs.illinois.edu:/mounts/bilbo/disks/0/www/cogcomp/html/software/doc/</url>
        </site>
    </distributionManagement>

    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.3</version>
            </plugin>
        </plugins>
    </reporting>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.revelc.code</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>0.5.2</version>
                <configuration>
            <configFile>${googleEclipseFormatterStyle}</configFile>
            <excludes>
                <exclude>**/Morpha.java</exclude>
            </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.3</version>
                <configuration>
                    <links>
                        <link>http://download.oracle.com/javase/7/docs/api/</link>
                    </links>
                    <show>public</show>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.basepom.maven</groupId>
                <artifactId>duplicate-finder-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <id>default</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <printEqualFiles>false</printEqualFiles>
                    <failBuildInCaseOfDifferentContentConflict>false</failBuildInCaseOfDifferentContentConflict>
                    <failBuildInCaseOfEqualContentConflict>false</failBuildInCaseOfEqualContentConflict>
                    <failBuildInCaseOfConflict>false</failBuildInCaseOfConflict>
                    <checkCompileClasspath>true</checkCompileClasspath>
                    <checkRuntimeClasspath>true</checkRuntimeClasspath>
                    <checkTestClasspath>true</checkTestClasspath>
                    <skip>false</skip>
                    <quiet>false</quiet>
                </configuration>
            </plugin>
            <!-- for License Maven Plugin -->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>2.11</version>
                <configuration>
                    <header>core-utilities/src/main/resources/license-header.txt</header>
                    <excludes>
                        <exclude>**/*.txt</exclude>
                        <exclude>**/*.groovy</exclude>
                        <exclude>**/*.sh</exclude>
                        <exclude>**/*.lbj</exclude>
                        <exclude>**/*.xml</exclude>
                        <exclude>**/*.properties</exclude>
                        <exclude>**/*.md</exclude>
                        <exclude>**/*.py</exclude>
                        <exclude>**/*.yml</exclude>
                        <exclude>**/*.html</exclude>
                        <exclude>src/test/resources/**</exclude>
                        <exclude>src/main/resources/**</exclude>

			<!-- don't add license headers to LBJava generated files. -->
                        <exclude>**/Affixes.java</exclude>
                        <exclude>**/BrownClusterPaths.java</exclude>
                        <exclude>**/Capitalization.java</exclude>
                        <exclude>**/FeaturesLevel1Only.java</exclude>
                        <exclude>**/FeaturesLevel1Only*.java</exclude>
                        <exclude>**/FeaturesLevel2*.java</exclude>
                        <exclude>**/NETaggerLevel2*.java</exclude>
                        <exclude>**/FeaturesLevel1Only*.java</exclude>
                        <exclude>**/FeaturesLevel2.java</exclude>
                        <exclude>**/FeaturesLevel1SharedWithLevel2.java</exclude>
                        <exclude>**/NETaggerLevel1*.java</exclude>
                        <exclude>**/NETaggerLevel1.java</exclude>
                        <exclude>**/NETaggerLevel2.java</exclude>
                        <exclude>**/IsSentenceStart.java</exclude>
                        <exclude>**/NETaggerLevel2*.java</exclude>
                        <exclude>**/PreviousTag1Level1.java</exclude>
                        <exclude>**/FormParts.java</exclude>
                        <exclude>**/PreviousTag2Level1.java</exclude>
                        <exclude>**/PreviousTagPatternLevel1.java</exclude>
                        <exclude>**/PreviousTag1Level2.java</exclude>
                        <exclude>**/GazetteersFeatures.java</exclude>
                        <exclude>**/Forms.java</exclude>
                        <exclude>**/WordEmbeddingFeatures.java</exclude>
                        <exclude>**/FeaturesSharedTemp.java</exclude>
                        <exclude>**/NELabel.java</exclude>
                        <exclude>**/prevTagsForContextLevel1.java</exclude>
                        <exclude>**/WordTypeInformation.java</exclude>
                        <exclude>**/Level1AggregationFeatures.java</exclude>
                        <exclude>**/FeaturesLevel2*.java</exclude>
                        <exclude>**/PreviousTagPatternLevel2.java</exclude>
                        <exclude>**/nonLocalFeatures.java</exclude>
                        <exclude>**/PreviousTag2Level2.java</exclude>
                        <exclude>**/wordType.java</exclude>
                        <exclude>**/prevTagsForContextLevel2.java</exclude>
                        <exclude>**/WikifierFeatures.java</exclude>
                        <exclude>**/AffixesZH.java</exclude>

                        <exclude>**/*.lex</exclude>
                        <exclude>**/*.lc</exclude>
                        <exclude>**/*.config</exclude>
                        <exclude>**/*.proto</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
                <version>2.10</version>
            </extension>
        </extensions>
    </build>

</project>
